unpackaged/main/default/objects/EventApi__Speaker_Schedule_Item__c/EventApi__Speaker_Schedule_Item__c.object-meta.xml
<CustomObject>
    <description>Schedule Item Speakers track the various Sessions and Seminars a Speaker is scheduled to present for a Event.</description>
    <label>Speaker Schedule Item</label>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speaker Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>