unpackaged/main/default/objects/EventApi__Speaker_Schedule_Item__c/fields/EventApi__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Speaker is considered the lead or &quot;primary&quot; presenter for the Schedule Item.</description>
    <inlineHelpText>When checked, the Speaker is considered the lead or &quot;primary&quot; presenter for the Schedule Item.</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>