unpackaged/main/default/objects/EventApi__Speaker_Schedule_Item__c/fields/EventApi__Role__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Role__c</fullName>
    <description>The speaker&#39;s role with respect to the related schedule item.</description>
    <inlineHelpText>The speaker&#39;s role with respect to the related schedule item.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Poster Presenter</fullName>
                <default>true</default>
                <label>Poster Presenter</label>
            </value>
            <value>
                <fullName>Keynote Speaker</fullName>
            </value>
            <value>
                <fullName>Panelist</fullName>
            </value>
            <value>
                <fullName>Paper Presenter</fullName>
            </value>
            <value>
                <fullName>Moderator</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Lecturer</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>