unpackaged/main/default/objects/EventApi__Speaker_Schedule_Item__c/fields/EventApi__Speaker__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the speaker.</description>
    <inlineHelpText>Link to the speaker.</inlineHelpText>
    <label>Speaker</label>
    <referenceTo>EventApi__Speaker__c</referenceTo>
    <relationshipLabel>Schedule</relationshipLabel>
    <relationshipName>Speaker_Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>